2.0.0-alpha04
- Improved: Keyboard does't hide save/clear buttons on text input sheet anymore (#261)
- Improved: Updated translations
- Fixed: RuntimeExceptions in log if Home Assistant grocy add-on is not used (#273)
- Fixed: Mixed languages if activity is restarted (#260)
- Fixed: Portuguese not working caused by variant code (#264)

2.0.0-alpha03
- New: Official support for Home Assistant grocy add-on (#249)
- New: App can handle username:password in server URL for HTTP authentication (#273)
- Improved: Rewritten login flow
- Improved: Update certificate compatibility information
- Improved: Demo server changes when the language is changed (#346)
- Improved: Price and store lines on purchase page confirmation bottom sheet
- Improved: Updated translations
- Fixed: Crash when open store selection on purchase page (#347)
- Fixed: Crash on purchase page when price was empty & scan mode active
- Fixed: Behavior on purchase & consume pages when quantity units of product were missing
- Fixed: Crash on consume page when location could not be found
- Fixed: Crash on consume page when location_is_freezer was empty

2.0.0-alpha02
- New: Language option in appearance settings (#322)
- Improved: Updated translations
- Fixed: Old update info wrongly shown (#322)
- Fixed: Crash on quantity units list refresh (#331)
- Fixed: Wrong product name after adding new product with "&" in its name (#333)
- Fixed: Wrong resource qualifier for Hebrew

2.0.0-alpha01
- New: Compatibility with grocy v3.0.x
- New: Incompatibility with grocy v2.7.x
- New: Overview page
- New: Rewritten Settings, Purchase & Consume pages
- New: Lots of new options for configuration (check them out!)
- New: Login flow for QR codes from grocy server
- Improved: Loading speed (by use of database)
- Improved: Smooth & consistent navigation between pages
- Improved: Product autocomplete lists now use fuzzy matching
- Improved: Server requests are now more secure with API key in header