@@ -101,7 +101,7 @@ public class MasterLocationFragment extends BaseFragment {
         // WEB REQUESTS
 
         dlHelper = new DownloadHelper(activity, TAG);
-        grocyApi = activity.getGrocy();
+        grocyApi = activity.getGrocyApi();
         gson = new Gson();
 
         // INITIALIZE VARIABLES
