@@ -103,7 +103,7 @@ public class MasterProductGroupFragment extends BaseFragment {
         // WEB
 
         dlHelper = new DownloadHelper(activity, TAG);
-        grocyApi = activity.getGrocy();
+        grocyApi = activity.getGrocyApi();
         gson = new Gson();
 
         // VARIABLES
