@@ -100,7 +100,7 @@ public class MasterStoreFragment extends BaseFragment {
         // WEB
 
         dlHelper = new DownloadHelper(activity, TAG);
-        grocyApi = activity.getGrocy();
+        grocyApi = activity.getGrocyApi();
         gson = new Gson();
 
         // VARIABLES
