@@ -4,6 +4,7 @@
 - Fixed: RuntimeExceptions in log if Home Assistant grocy add-on is not used (#273)
 - Fixed: Mixed languages if activity is restarted (#260)
 - Fixed: Portuguese not working caused by variant code (#264)
+- Fixed: Updates to master data were pushed to the wrong server (#363)
 
 2.0.0-alpha03
 - New: Official support for Home Assistant grocy add-on (#249)
